--- a/Rebels BuildInfo.csproj
+++ b/Rebels BuildInfo.csproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="VRage, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\SpaceEngineers\VRage.dll</HintPath>
+    </Reference>
     <Reference Include="VRage.Game, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\SpaceEngineers\VRage.Game.dll</HintPath>
     </Reference>
